@@ -1,3 +1,8 @@
+2006-10-22  NANKI Haruo <nanki@dotswitch.net>
+
+	* packages/cairo/ext/rb_cairo_path.c (cr_path_each): fixed
+	a conversion bug.
+
 2006-10-20  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_context.c (cr_select_font_face):
